--- a/Homepwner/Base.lproj/Main.storyboard
+++ b/Homepwner/Base.lproj/Main.storyboard
@@ -11,12 +11,12 @@
             <objects>
                 <tableViewController id="Oee-9v-bOL" customClass="ItemsViewController" customModule="Homepwner" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="lxC-tp-xx3">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="64" width="600" height="536"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ItemCell" rowHeight="65" id="r5Q-cn-lT9" customClass="ItemCell" customModule="Homepwner" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="92" width="600" height="65"/>
+                                <rect key="frame" x="0.0" y="28" width="600" height="65"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="r5Q-cn-lT9" id="Lkw-RU-0vd">
                                     <rect key="frame" x="0.0" y="0.0" width="600" height="64.5"/>
@@ -85,11 +85,11 @@
                         <viewControllerLayoutGuide type="bottom" id="qF7-vq-a4Z"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="CY4-IM-qJh">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="64" width="600" height="536"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="PNL-Gm-gaR">
-                                <rect key="frame" x="20" y="72" width="560" height="520"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" misplaced="YES" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="PNL-Gm-gaR">
+                                <rect key="frame" x="20" y="72" width="560" height="476"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="aGv-T7-MsG">
                                         <rect key="frame" x="0.0" y="0.0" width="560" height="30"/>
@@ -148,33 +148,52 @@
                                             </textField>
                                         </subviews>
                                     </stackView>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="249" text="Date Created" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4X2-d4-OQL">
-                                        <rect key="frame" x="0.0" y="114" width="560" height="368"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="249" misplaced="YES" text="Date Created" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4X2-d4-OQL">
+                                        <rect key="frame" x="0.0" y="114" width="560" height="21"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cEh-hI-KFD">
-                                        <rect key="frame" x="0.0" y="490" width="560" height="30"/>
+                                    <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cEh-hI-KFD">
+                                        <rect key="frame" x="0.0" y="143" width="560" height="30"/>
                                         <state key="normal" title="Change Date"/>
                                         <connections>
                                             <segue destination="cP1-84-rNs" kind="show" identifier="ShowDate" id="QTm-uc-fiR"/>
                                         </connections>
                                     </button>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="248" verticalCompressionResistancePriority="749" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="bvC-0u-TIC">
+                                        <rect key="frame" x="0.0" y="181" width="560" height="296"/>
+                                    </imageView>
                                 </subviews>
                                 <constraints>
                                     <constraint firstItem="EMP-Hk-BPy" firstAttribute="leading" secondItem="oNz-pf-huU" secondAttribute="leading" id="NUl-Oe-I7U"/>
                                     <constraint firstItem="oNz-pf-huU" firstAttribute="leading" secondItem="78L-gN-MIy" secondAttribute="leading" id="ubE-YM-aGb"/>
                                 </constraints>
                             </stackView>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6yq-m9-0s5">
+                                <rect key="frame" x="0.0" y="492" width="600" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="d1M-it-mBe"/>
+                                </constraints>
+                                <items>
+                                    <barButtonItem systemItem="camera" id="kId-dv-YuJ">
+                                        <connections>
+                                            <action selector="takePicture:" destination="hya-wZ-Rwl" id="k1k-Ac-WMZ"/>
+                                        </connections>
+                                    </barButtonItem>
+                                </items>
+                            </toolbar>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <gestureRecognizers/>
                         <constraints>
+                            <constraint firstItem="6yq-m9-0s5" firstAttribute="leading" secondItem="CY4-IM-qJh" secondAttribute="leading" id="DQF-zM-uXy"/>
                             <constraint firstAttribute="trailingMargin" secondItem="PNL-Gm-gaR" secondAttribute="trailing" id="IJE-ps-Uwf"/>
+                            <constraint firstItem="6yq-m9-0s5" firstAttribute="trailing" secondItem="CY4-IM-qJh" secondAttribute="trailing" id="Jl7-IT-hbt"/>
                             <constraint firstItem="PNL-Gm-gaR" firstAttribute="top" secondItem="JdR-Qa-OhH" secondAttribute="bottom" constant="8" id="KOs-q6-tsm"/>
-                            <constraint firstItem="qF7-vq-a4Z" firstAttribute="top" secondItem="PNL-Gm-gaR" secondAttribute="bottom" constant="8" id="iQ9-ij-09R"/>
                             <constraint firstItem="PNL-Gm-gaR" firstAttribute="leading" secondItem="CY4-IM-qJh" secondAttribute="leadingMargin" id="lFB-qm-VGh"/>
+                            <constraint firstItem="qF7-vq-a4Z" firstAttribute="top" secondItem="6yq-m9-0s5" secondAttribute="bottom" id="qBs-0O-IdN"/>
+                            <constraint firstItem="6yq-m9-0s5" firstAttribute="top" secondItem="PNL-Gm-gaR" secondAttribute="bottom" constant="8" id="rc4-xd-Yrw"/>
                         </constraints>
                         <connections>
                             <outletCollection property="gestureRecognizers" destination="1aL-3F-yPj" appends="YES" id="FdS-Lp-Nsm"/>
@@ -182,6 +201,7 @@
                     </view>
                     <connections>
                         <outlet property="dateLabel" destination="4X2-d4-OQL" id="JsR-Ft-wrQ"/>
+                        <outlet property="imageView" destination="bvC-0u-TIC" id="S7k-UX-f3K"/>
                         <outlet property="nameField" destination="EMP-Hk-BPy" id="aKF-wy-lbR"/>
                         <outlet property="serialNumberField" destination="oNz-pf-huU" id="bnW-oe-h80"/>
                         <outlet property="valueField" destination="78L-gN-MIy" id="E5I-3x-zOF"/>
@@ -205,11 +225,11 @@
                         <viewControllerLayoutGuide type="bottom" id="Eji-wv-eMT"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="b7z-Ev-rxe">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="64" width="600" height="536"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="date" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="75E-B8-fta">
-                                <rect key="frame" x="0.0" y="192" width="600" height="216"/>
+                                <rect key="frame" x="0.0" y="160" width="600" height="216"/>
                                 <date key="date" timeIntervalSinceReferenceDate="489858006.48926997">
                                     <!--2016-07-10 15:40:06 +0000-->
                                 </date>
@@ -236,7 +256,7 @@
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="6Vt-Po-DrS" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="9QM-ww-4HX">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" translucent="NO" id="9QM-ww-4HX">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
